criando migration de categoria